--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+*.pdf
+vegplot_code-dev/AC14_floristic_plots.csv
