raw data not needed

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ vegplot_code-dev/Assignnewplots.R
 vegplot_code-dev/char_spp_top.csv
 vegplot_code-dev/char_spp_based_alloc_2359.zip
 vegplot_code-dev/char_spp_matched.csv
+vegplot_code-dev/data/d2cnewMay08.csv
+vegplot_code-dev/data/4735_East_NewCA_2359_TaxonomicList.csv
+vegplot_code-dev/data/4735_East_NewCA_2359_CensusList.csv
+vegplot_code-dev/data/May2018_New_CA_yes_2359_LocationList.csv
+vegplot_code-dev/data/4735_East_NewCA_2359.txt
