shinyapps.io logs

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ vegplot_code-dev/data/4735_East_NewCA_2359_TaxonomicList.csv
 vegplot_code-dev/data/4735_East_NewCA_2359_CensusList.csv
 vegplot_code-dev/data/May2018_New_CA_yes_2359_LocationList.csv
 vegplot_code-dev/data/4735_East_NewCA_2359.txt
+vegplot_code-dev/logs/
